Fix - Top header  on mobile

--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -100,6 +100,7 @@
 	.footer-bottom-container {
 		display: flex;
 		justify-content: space-between;
+		align-items: center;
 		border-top: 1px solid #212538;
 	}
 
