--- a/assets/sass/layout/_grid.scss
+++ b/assets/sass/layout/_grid.scss
@@ -7,6 +7,16 @@
 	margin-left: auto;
 	padding-left: 15px;
 	padding-right: 15px;
+	
+	&.container--flex {
+		display: flex;
+			
+		&::before,
+		&::after {
+			content: none;
+			display: none;
+		}
+	}
 }
 @media (min-width: 768px) {
 	.container {
